(ui) fix gap

--- a/app/frontend/src/stylesheets/modules/members.scss
+++ b/app/frontend/src/stylesheets/modules/members.scss
@@ -15,7 +15,7 @@
     padding: 1.6rem;
     display: grid;
     grid-template-columns: 48px 1fr;
-    gap: 1.6rem 2.4rem;
+    gap: 0 2.4rem;
     border: 1px solid var(--gray-soft-dark);
     border-radius: var(--border-radius);
     background-color: var(--gray-soft-lightest);
@@ -83,7 +83,7 @@
         overflow-y: auto;
       }
 
-      hr { margin: 0; }
+      hr { margin: 1.6rem 0 0; }
       .child-item:last-of-type { padding-bottom: 0; }
     }
 
